--- a/Retrodactyl.Extensions.SFML.csproj
+++ b/Retrodactyl.Extensions.SFML.csproj
@@ -2,10 +2,23 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <PackageRequireLicenseAcceptance>false</PackageRequireLicenseAcceptance>
+    <PackageLicenseFile>LICENSE.md</PackageLicenseFile>
+    <PackageProjectUrl>https://github.com/digital-synapse/Retrodactyl.Extensions.SFML</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/digital-synapse/Retrodactyl.Extensions.SFML</RepositoryUrl>
+    <PackageTags>Retrodactyl</PackageTags>
+    <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="SFML.Net" Version="2.5.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="LICENSE.md">
+      <Pack>True</Pack>
+      <PackagePath></PackagePath>
+    </None>
   </ItemGroup>
 
 </Project>
